# AIJobRadar

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  README_SR.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: cache.py  config.py  main.py  models.py
app/routes/: jobs.py
app/scrapers/: __init__.py  base.py  hackernews.py  manager.py  remoteok.py  weworkremotely.py
docs/: README.md
tests/: conftest.py  test_api.py  test_cache.py  test_scrapers.py
tests/fixtures/: hackernews_comments.json  hackernews_story.json  remoteok_sample.html  remoteok_sample.json  weworkremotely_sample.html
